# Boids

./: .gitignore  Boid.py  DotBoid.py  README.md  Sim.py  main.py  pyproject.toml
