[tool.poetry]
name = "Boids"
version = "0.1.0"
description = "Boids simulation in pygame"
authors = ["Ryan Jin <ryanjin007@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pygame = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
